--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,7 +57,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
-  background-color: black;
   color: white;
 
 }
@@ -65,9 +64,7 @@ body {
 body::after {
   content: "";  
     /* Grain */
-    opacity: 0.6;
-    background: url(grain.png), linear-gradient(12.51deg, #3A2F18 100%, #3A2F18 0%, #0E0C06 100% ), radial-gradient(#3A2F18, #0E0C06);
-    background-blend-mode: overlay, normal, normal;
+
     top: 0;
     left: 0;
     bottom: 0;
@@ -77,9 +74,10 @@ body::after {
 }
 
 #__gatsby, #gatsby-focus-wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  background: url(grain.png), linear-gradient(12.51deg, #3A2F18 100%, #3A2F18 0%, #0E0C06 100% ), radial-gradient(#000000, #7D7D7D);
+  background-blend-mode: overlay, overlay;
+  overflow-y: auto;
 }
 
 .blur-text {
