Random reveal, glitch, fade-in sidebar

--- a/src/styles/glitch.css
+++ b/src/styles/glitch.css
@@ -1,116 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  @font-face {
-    font-family: DS-Digital;
-    font-weight: 400;
-    src: url(../assets/fonts/DS-Digital/DS-Digi.ttf);
-  }
-  @font-face {
-    font-family: DS-Digital;
-    font-weight: 700;
-    src: url(../assets/fonts/DS-Digital/DS-Digib.ttf);
-  }
-  @font-face {
-    font-family: DS-Digital;
-    font-weight: 400;
-    font-style: italic;
-    src: url(../assets/fonts/DS-Digital/DS-Digii.ttf);
-  }
-  @font-face {
-    font-family: DS-Digital;
-    font-weight: 700;
-    font-style: italic;
-    src: url(../assets/fonts/DS-Digital/DS-Digibi.ttf);
-  }
-  @font-face {
-    font-family: W95FA;
-    font-weight: 400;
-    src: url(../assets/fonts/W95FA/W95FA.otf);
-  }
-  h1 {
-    @apply text-3xl;
-  }
-  h2 {
-    @apply text-2xl;
-  }
-  p {
-    @apply mb-2
-  }
-  quote {
-    display: block;
-    @apply ml-8 italic border-l-gray-200 border-l-4 pl-4 my-6
-  }
-  a {
-    @apply hover:underline text-berlin-yellow;
-    @apply cursor-pointer;
-  }
-  li {
-    @apply list-disc list-inside
-  }
-}
-
-body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  min-height: 100vh;
-  color: white;
-  /* Overscroll contain to avoid  the browser trackpad gesture backward navigating the history */
-  overscroll-behavior-x: contain;
-}
-
-body::after {
-  content: "";  
-    /* Grain */
-
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;   
-}
-
-#__gatsby, #gatsby-focus-wrapper {
-  height: 100vh;
-  background: url(grain.png), linear-gradient(12.51deg, #3A2F18 100%, #3A2F18 0%, #0E0C06 100% ), radial-gradient(#000000, #7D7D7D);
-  background-blend-mode: overlay, overlay;
-  overflow-y: auto;
-}
-
-.blur-text {
-  color: transparent;
-  /* text-shadow: <blur>, <outer-glow> */
-  text-shadow: 0 0 5px rgb(255 210 0 / 75%), theme("colors.berlin-yellow") 0 0 15px;
-}
-
-.blink {
-  animation: blinker 1s step-start infinite;
-}
-
-@keyframes blinker {
-  50% {
-    opacity: 0;
-  }
-}
-
-.fade-in-left {
-  transform: translateX(0);
-  opacity: 1;
-  visibility: visible;
-  transition: all 0.5s;
-}
-
-.fade-out-left {
-    /* exact size of the sidebar = 13rem */
-  transform: translate(-13rem);
-  opacity: 0;
-  visibility: hidden;
-  transition: all 0.5s;
-}
+/* From https://codepen.io/mattgrosswork/pen/VwprebG */
 
 .layers {
   position: relative;
