--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -121,3 +121,18 @@ body {
   visibility: hidden;
   transition: all 0.5s;
 }
+
+.fade-in-right {
+  transform: translateX(0);
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.5s;
+}
+
+.fade-out-right {
+    /* exact size of the sidebar = 13rem */
+  transform: translate(13rem);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s;
+}
