--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,7 +55,7 @@
 
 body {
   margin: 0;
-    /* -webkit-font-smoothing: antialiased; */
+    -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
   color: white;
