--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -92,6 +92,12 @@ body {
   text-shadow: 0 0 5px rgb(255 210 0 / 75%), theme("colors.berlin-yellow") 0 0 15px;
 }
 
+.blur-text-small {
+  color: transparent;
+  /* text-shadow: <blur>, <outer-glow> */
+  text-shadow: 0 0 7px rgb(255 210 0 / 75%), theme("colors.berlin-yellow") 0 0 2px;
+}
+
 .blink {
   animation: blinker 1s step-start infinite;
 }
