--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -66,7 +66,7 @@ body {
 #__gatsby, #gatsby-focus-wrapper {
   height: 100vh;
   /* background: url(grain-opacity.png), linear-gradient(5deg, #3A2F18 -25%, #0E0C06 15% ); */
-  background: url(grain-opacity.png), linear-gradient(5deg, #3A2F18 -10%, rgba(14, 12, 6, 0) 25% ), radial-gradient( farthest-corner at top left, rgba(14,14,14) 0%, rgba(125,125,125,0.6) 150%);
+  background: url(grain-opacity-compressed.png), linear-gradient(5deg, #3A2F18 -10%, rgba(14, 12, 6, 0) 25% ), radial-gradient( farthest-corner at top left, rgba(14,14,14) 0%, rgba(125,125,125,0.6) 150%);
   background-blend-mode: overlay, overlay;
   overflow-y: auto;
 }
