--- a/src/styles/rooms/fifthFloor.css
+++ b/src/styles/rooms/fifthFloor.css
@@ -42,12 +42,15 @@
 }
 
 .cinema {
+  top:0;
+  left:0;
   position: absolute;
-  clip-path:polygon(86% 14%, 93% 9%, 95.5% 52%, 95.5% 61.5%, 88.5% 61.5%);
-  opacity: 0.5;
-  background-color: aqua;
+  opacity: 0.9;
   width: 100%;
   height: 100%;
+  background-color: red;
+  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  clip-path:polygon(88% 13%, 96.5% 8%, 99% 45%, 99% 54%, 91% 54%);
 }
 
 .cinema:hover {
@@ -56,12 +59,15 @@
 }
 
 .cinebar {
+  top:0;
+  left:0;
   position: absolute;
-  clip-path:polygon(92% 61%, 95.5% 61%, 95.5% 95%, 92% 95%);
-  opacity: 0.5;
-  background-color: red;
+  opacity: 0.9;
   width: 100%;
   height: 100%;
+  background-color: red;
+  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  clip-path:polygon(95% 55%, 99.5% 55%, 99.5% 88%, 95% 88%);
 }
 
 .cinebar:hover {
