--- a/src/styles/rooms/firstFloor.css
+++ b/src/styles/rooms/firstFloor.css
@@ -1,10 +1,18 @@
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
 .community-space-first-floor {
+  top:0;
+  left:0;
   position: absolute;
-  clip-path:polygon(53.5% 36%, 60.5% 29%, 60.5% 94%, 53.5% 94%);
-  opacity: 0.5;
-  background-color: blue;
+  opacity: 0.9;
   width: 100%;
   height: 100%;
+  background-color: red;
+  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  clip-path: polygon(53% 29%, 60.5% 25%, 60.5% 87%, 53% 87%);
 }
 
 .community-space-first-floor:hover {
