--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -208,3 +208,20 @@ body {
   animation: light-up-animation 2s ease infinite;
   animation-delay: 1s;
 }
+
+@keyframes flickerAnimation {
+  0%   { opacity:1; }
+  11%   { opacity: 0.7; }
+  25%   { opacity:0.1; }
+  29%   { opacity:0.6; }
+  40%   { opacity:0,95; }
+  50%  { opacity:0; }
+  72%  { opacity:0.66; }
+  80%  { opacity:0.92; }
+  90%  { opacity:0.6; }
+  100% { opacity:1; }
+}
+
+.animate-flicker {
+    animation: flickerAnimation 1.5s ease;
+}
