--- a/src/styles/rooms/groundFloor.css
+++ b/src/styles/rooms/groundFloor.css
@@ -12,7 +12,7 @@
   width: 100%;
   height: 100%;
   background-color: red;
-  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  animation: blinker 1s linear infinite;
   clip-path:polygon(79.5% 15%, 87.5% 10.5%, 90.5% 55%, 89% 55%, 89% 67%, 87% 67%, 87% 86.5%, 85% 86.5%, 85% 67%, 83% 67%, 82.5% 65%, 79.5% 65%);
 }
 
@@ -24,7 +24,7 @@
   width: 100%;
   height: 100%;
   background-color: red;
-  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  animation: blinker 1s linear infinite;
   clip-path:polygon(61.5% 42.5%, 71.5% 42.5%, 71.5% 66%, 68.5% 66%, 68.5% 86.5%, 66% 86.5%, 66% 66%, 61.5% 66%);
 }
 
@@ -36,7 +36,7 @@
   width: 100%;
   height: 100%;
   background-color: red;
-  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  animation: blinker 1s linear infinite;
   clip-path:polygon(61.5% 24.5%, 79% 15%, 79% 87%, 71.5% 87%, 71.5% 43%, 61.5% 43%);
 }
 
@@ -48,7 +48,7 @@
   width: 100%;
   height: 100%;
   background-color: red;
-  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  animation: blinker 1s linear infinite;
   clip-path:polygon(33% 47.5%, 53.8% 28.5%, 53.8% 65%, 34.5% 65%);
 }
 
@@ -61,7 +61,7 @@
   width: 100%;
   height: 100%;
   background-color: red;
-  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  animation: blinker 1s linear infinite;
   clip-path:polygon(54% 28.5%, 61.3% 24.5%, 61.3% 86.2%, 54% 86.2%);
 }
 
@@ -74,5 +74,17 @@
   height: 100%;
   background-color: red;
   clip-path: polygon(22.3% 66.5%, 39% 66.5%, 39% 86.5%, 37.8% 86.5%, 37.8% 82%, 33.5% 82%, 33.5% 86.5%, 22.3% 86.5%);
-  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  animation: blinker 1s linear infinite;
+}
+
+.main-enterence {
+  top:0;
+  left:0;
+  position: absolute;
+  opacity: 0.9;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  animation: blinker 1s linear infinite;
+  clip-path:polygon(62% 88%, 73% 88%, 73% 100%, 62% 100%);
 }
