--- a/src/styles/rooms/secondFloor.css
+++ b/src/styles/rooms/secondFloor.css
@@ -1,10 +1,13 @@
 .community-space-second-floor {
+  top:0;
+  left:0;
   position: absolute;
-  clip-path:polygon(29% 70.5%, 36.5% 61.5%, 37.5% 70.5%, 56.5% 70.5%, 56.5% 32%, 60.5% 29%, 60.5% 94%, 51% 94%, 51% 78%, 44% 78%, 44% 81.5%,29% 81%);
-  opacity: 0.5;
-  background-color: blue;
+  opacity: 0.9;
   width: 100%;
   height: 100%;
+  background-color: red;
+  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  clip-path:polygon(29% 70.5%, 36.5% 61.5%, 37.5% 70.5%, 56.5% 70.5%, 56.5% 32%, 60.5% 29%, 60.5% 94%, 51% 94%, 51% 78%, 44% 78%, 44% 81.5%,29% 81%);
 }
 
 .community-space-second-floor:hover {
