--- a/src/styles/rooms/groundFloor.css
+++ b/src/styles/rooms/groundFloor.css
@@ -62,7 +62,7 @@
   height: 100%;
   background-color: red;
   animation: blinker 1s linear infinite;
-  clip-path:polygon(54% 28.5%, 61.3% 24.5%, 61.3% 86.2%, 54% 86.2%);
+  clip-path:polygon(54% 28.5%, 61.3% 24.5%, 61.3% 86.5%, 54% 86.5%);
 }
 
 .creators-lab {
@@ -87,4 +87,16 @@
   background-color: red;
   animation: blinker 1s linear infinite;
   clip-path:polygon(62% 88%, 73% 88%, 73% 100%, 62% 100%);
+}
+
+.registration {
+  top:0;
+  left:0;
+  position: absolute;
+  opacity: 0.9;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  animation: blinker 1s linear infinite;
+  clip-path:polygon(86% 88%, 98% 88%, 98% 100%, 86% 100%);
 }
