--- a/src/styles/rooms/fifthFloor.css
+++ b/src/styles/rooms/fifthFloor.css
@@ -1,30 +1,25 @@
 
 .wildenbruch {
+  top:0;
+  left:0;
   position: absolute;
-  clip-path:polygon(29.5% 70%, 35% 63.5%, 35.5% 72.5%, 50% 72.5%, 50% 95%, 29.5% 95%);
-  opacity: 0.5;
-  background-color: darkorange;
+  opacity: 0.9;
   width: 100%;
   height: 100%;
-}
-
-.wildenbruch:hover {
-  cursor: pointer;
-  opacity: 0.8;
+  background-color: red;
+  animation: blinker 1s linear infinite;
+  clip-path:polygon(25% 66%, 48% 66%, 48% 89%, 25% 89%);
 }
 
 .persius {
+  top:0;
+  left:0;
   position: absolute;
-  clip-path:polygon(52% 36%, 60.5% 29%, 60.5% 73%, 52% 73%);
-  opacity: 0.5;
-  background-color: blue;
+  opacity: 0.9;
   width: 100%;
   height: 100%;
-}
-
-.persius:hover {
-  cursor: pointer;
-  opacity: 0.8;
+  background-color: red;
+  animation: blinker 1s linear infinite;  clip-path:polygon(50.5% 34%, 58.5% 28%, 58.5% 65%, 50.5% 65%);
 }
 
 .parlour {
@@ -49,14 +44,10 @@
   width: 100%;
   height: 100%;
   background-color: red;
-  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  animation: blinker 1s linear infinite;
   clip-path:polygon(88% 13%, 96.5% 8%, 99% 45%, 99% 54%, 91% 54%);
 }
 
-.cinema:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
 
 .cinebar {
   top:0;
