--- a/src/styles/rooms/groundFloor.css
+++ b/src/styles/rooms/groundFloor.css
@@ -100,3 +100,15 @@
   animation: blinker 1s linear infinite;
   clip-path:polygon(91% 88%, 100% 88%, 100% 100%, 91% 100%);
 }
+
+.xrRoom {
+  top:0;
+  left:0;
+  position: absolute;
+  opacity: 0.9;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  animation: blinker 1s linear infinite;
+  clip-path:polygon(95.5% 56%, 99.3% 56%, 99.3% 79%, 95.5% 79%);
+}
