--- a/src/styles/rooms/secondFloor.css
+++ b/src/styles/rooms/secondFloor.css
@@ -7,7 +7,8 @@
   height: 100%;
   background-color: red;
   animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  clip-path:polygon(29% 70.5%, 36.5% 61.5%, 37.5% 70.5%, 56.5% 70.5%, 56.5% 32%, 60.5% 29%, 60.5% 94%, 51% 94%, 51% 78%, 44% 78%, 44% 81.5%,29% 81%);
+  clip-path:polygon(29% 70.5%, 36.5% 
+  61.5%, 37.5% 70.5%, 56.5% 70.5%, 56.5% 32%, 60.5% 29%, 60.5% 94%, 51% 94%, 51% 78%, 44% 78%, 44% 81.5%,29% 81%);
 }
 
 .community-space-second-floor:hover {
@@ -83,4 +84,16 @@
 .meeting-room-2-second-floor:hover {
   cursor: pointer;
   opacity: 0.8;
+}
+
+.alice {
+  top:0;
+  left:0;
+  position: absolute;
+  opacity: 0.9;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  animation: blinker 1s linear infinite;
+  clip-path:polygon(26.5% 71%, 29.3% 71%, 29.3% 84%, 26.5% 84%);
 }
