--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -118,6 +118,7 @@ body::before {
   right: 0;
   bottom: 0;
   background-image: url("bg.png"); 
+  /* background-size: cover; */
   opacity: 0.5;
   z-index: -1;
 }
