Fix title font size

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,8 +45,7 @@
     -webkit-font-smoothing: antialiased;
   }
   h1 {
-    @apply sm:text-3xl;
-    @apply text-xl;
+    @apply text-xl sm:text-3xl;
   }
   h2 {
     @apply text-2xl;
