--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,7 @@
   @font-face {
     font-family: DotCapital;
     font-weight: 400;
-    src: url(../assets/fonts/dot2/dot2.ttf);
+    src: url(../assets/fonts/dotCapital/dotCapital.ttf);
   }
 
   .material-symbols-outlined {
