Add red color, add wolpy

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -124,6 +124,8 @@ body::before {
   right: 0;
   bottom: 0;
   background-image: url("bg.png");
+  background-color: rgba(243, 228, 189, 0.4);
+
   /* cover horizontally and repeat vertically https://stackoverflow.com/questions/41025630/css-background-image-stretch-horizontally-and-repeat-vertically */
   background-size: 100% auto;
   background-repeat: repeat-y;
