Add mentor desk map, update manual

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -201,7 +201,7 @@ body::before {
 
 .decorate-links a {
   text-decoration: underline;
-  /* color: theme("colors.black"); */
+  color: theme("colors.berlin-red");
 }
 
 .blink {
