--- a/src/styles/rooms/groundFloor.css
+++ b/src/styles/rooms/groundFloor.css
@@ -4,6 +4,31 @@
   }
 }
 
+.yard0 {
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0.9;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  animation: blinker 1s linear infinite;
+  clip-path: polygon(
+    76.5% 15%,
+    86.2% 10.5%,
+    89% 58%,
+    87.2% 58%,
+    87.2% 73.5%,
+    85% 73.5%,
+    85% 97.5%,
+    83% 97.5%,
+    83% 73%,
+    80.5% 73%,
+    80.5% 69.5%,
+    76.5% 69.5%
+  );
+}
+
 .yard1 {
   top: 0;
   left: 0;
@@ -11,32 +36,7 @@
   opacity: 0.9;
   width: 100%;
   height: 100%;
-  background-color: red;
-  animation: blinker 1s linear infinite;
-  clip-path: polygon(
-    79.5% 15%,
-    87.5% 10.5%,
-    90.5% 55%,
-    89% 55%,
-    89% 67%,
-    87% 67%,
-    87% 86.5%,
-    85% 86.5%,
-    85% 67%,
-    83% 67%,
-    82.5% 65%,
-    79.5% 65%
-  );
-}
-
-.yard2 {
-  top: 0;
-  left: 0;
-  position: absolute;
-  opacity: 0.9;
-  width: 100%;
-  height: 100%;
-  background-color: red;
+  background-color: black;
   animation: blinker 1s linear infinite;
   clip-path: polygon(
     61.5% 42.5%,
@@ -57,12 +57,12 @@
   opacity: 0.9;
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background-color: black;
   animation: blinker 1s linear infinite;
   clip-path: polygon(57% 27%, 76.5% 15%, 76.5% 71%, 68% 71%, 68% 43%, 57% 43%);
 }
 
-.yard3 {
+.yard2 {
   top: 0;
   left: 0;
   position: absolute;
@@ -81,7 +81,7 @@
   opacity: 0.9;
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background-color: black;
   animation: blinker 1s linear infinite;
   clip-path: polygon(48.5% 33%, 57% 24.5%, 57% 95.5%, 48.5% 95.5%);
 }
