--- a/src/styles/rooms/fifthFloor.css
+++ b/src/styles/rooms/fifthFloor.css
@@ -1,30 +1,39 @@
+.artExhibition {
+  top: 0;
+  left: 0;
+  position: absolute;
+  opacity: 0.9;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  animation: blinker 1s linear infinite;
+  clip-path: polygon(
+    21.5% 69%,
+    28.5% 62.5%,
+    29.5% 71.5%,
+    46% 72%,
+    46% 79%,
+    38.5% 79%,
+    38.5% 96%,
+    21.5% 96%
+  );
+}
 
-.wildenbruch {
-  top:0;
-  left:0;
+.persius {
+  top: 0;
+  left: 0;
   position: absolute;
   opacity: 0.9;
   width: 100%;
   height: 100%;
   background-color: red;
   animation: blinker 1s linear infinite;
-  clip-path:polygon(25% 66%, 48% 66%, 48% 89%, 25% 89%);
-}
-
-.persius {
-  top:0;
-  left:0;
-  position: absolute;
-  opacity: 0.9;
-  width: 100%;
-  height: 100%;
-  background-color: red;
-  animation: blinker 1s linear infinite;  clip-path:polygon(50.5% 34%, 58.5% 28%, 58.5% 65%, 50.5% 65%);
+  clip-path: polygon(50.5% 34%, 58.5% 28%, 58.5% 65%, 50.5% 65%);
 }
 
 .parlour {
   position: absolute;
-  clip-path:polygon(69% 24.5%, 76.5% 20%, 76.5% 73%, 69% 73%);
+  clip-path: polygon(69% 24.5%, 76.5% 20%, 76.5% 73%, 69% 73%);
   opacity: 0.5;
   background-color: greenyellow;
   width: 100%;
@@ -37,28 +46,27 @@
 }
 
 .cinema {
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   position: absolute;
   opacity: 0.9;
   width: 100%;
   height: 100%;
   background-color: red;
   animation: blinker 1s linear infinite;
-  clip-path:polygon(88% 13%, 96.5% 8%, 99% 45%, 99% 54%, 91% 54%);
+  clip-path: polygon(88% 13%, 96.5% 8%, 99% 45%, 99% 54%, 91% 54%);
 }
 
-
 .cinebar {
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   position: absolute;
   opacity: 0.9;
   width: 100%;
   height: 100%;
   background-color: red;
   animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  clip-path:polygon(95% 55%, 99.5% 55%, 99.5% 88%, 95% 88%);
+  clip-path: polygon(95% 55%, 99.5% 55%, 99.5% 88%, 95% 88%);
 }
 
 .cinebar:hover {
