--- a/src/styles/rooms/firstFloor.css
+++ b/src/styles/rooms/firstFloor.css
@@ -3,16 +3,28 @@
     opacity: 0;
   }
 }
-.community-space-first-floor {
-  top:0;
-  left:0;
+.mckinsey {
+  top: 0;
+  left: 0;
   position: absolute;
   opacity: 0.9;
   width: 100%;
   height: 100%;
-  background-color: red;
-  animation: blinker 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  clip-path: polygon(53% 29%, 60.5% 25%, 60.5% 87%, 53% 87%);
+  background-color: black;
+  animation: blinker 1s linear infinite;
+  clip-path: polygon(
+    0% 95%,
+    0% 80%,
+    21% 60%,
+    21.5% 67%,
+    28.5% 62%,
+    29.5% 71.5%,
+    46% 72%,
+    46% 79%,
+    38.5% 79%,
+    38.5% 96%,
+    21.5% 96%
+  );
 }
 
 .community-space-first-floor:hover {
@@ -22,7 +34,7 @@
 
 .peter {
   position: absolute;
-  clip-path:polygon(87.5% 81%, 91.5% 81%, 91.5% 94%, 87.5% 94%);
+  clip-path: polygon(87.5% 81%, 91.5% 81%, 91.5% 94%, 87.5% 94%);
   opacity: 0.5;
   background-color: darkorange;
   width: 100%;
@@ -36,7 +48,7 @@
 
 .else {
   position: absolute;
-  clip-path:polygon(91.5% 60%, 96.5% 60%, 96.5% 94%, 91.5% 94%);
+  clip-path: polygon(91.5% 60%, 96.5% 60%, 96.5% 94%, 91.5% 94%);
   opacity: 0.5;
   background-color: lightgreen;
   width: 100%;
