--- a/src/styles/rooms/groundFloor.css
+++ b/src/styles/rooms/groundFloor.css
@@ -51,14 +51,14 @@
   background-color: black;
   animation: blinker 1s linear infinite;
   clip-path: polygon(
-    61.5% 42.5%,
-    71.5% 42.5%,
-    71.5% 66%,
-    68.5% 66%,
-    68.5% 86.5%,
-    66% 86.5%,
-    66% 66%,
-    61.5% 66%
+    57% 42.5%,
+    68% 42.5%,
+    68% 71%,
+    65% 71%,
+    65% 95%,
+    62% 95%,
+    62% 71%,
+    57% 71%
   );
 }
 
@@ -98,23 +98,23 @@
   clip-path: polygon(48.5% 33%, 57% 24.5%, 57% 95.5%, 48.5% 95.5%);
 }
 
-.creators-lab {
+.giftShop {
   top: 0;
   left: 0;
   position: absolute;
   opacity: 0.9;
   width: 100%;
   height: 100%;
-  background-color: red;
+  background-color: black;
   clip-path: polygon(
-    22.3% 66.5%,
-    39% 66.5%,
-    39% 86.5%,
-    37.8% 86.5%,
-    37.8% 82%,
-    33.5% 82%,
-    33.5% 86.5%,
-    22.3% 86.5%
+    14% 67.5%,
+    21% 61.5%,
+    21.5% 68.5%,
+    28.5% 61.5%,
+    29.5% 71%,
+    32.5% 71%,
+    32.5% 97%,
+    14% 97%
   );
   animation: blinker 1s linear infinite;
 }
